adjust object service to ID based api
